# niralis

./: .gitignore  Cargo.toml  README.md
crates/niralis-discovery/: Cargo.toml
crates/niralis-discovery/examples/: resolve-installed-session.rs
crates/niralis-discovery/src/: error.rs  lib.rs  sessions.rs  users.rs
crates/niralis-discovery/src/sessions/: desktop_entry.rs  discovery.rs  exec_check.rs  launch.rs  mod.rs  trust.rs
crates/niralis-discovery/src/sessions/tests/: find.rs  fixtures.rs  list.rs  mod.rs
crates/niralis-discovery/src/users/: filter.rs  mod.rs  nss.rs  tests.rs
crates/niralis-session/: Cargo.toml
crates/niralis-session-worker/: Cargo.toml
crates/niralis-session-worker/src/: full_worker_fixture.rs  lib.rs  logind.rs  main.rs  payload_scope.rs  runtime.rs  runtime_tests.rs  selinux.rs  smoke.rs  termination.rs  user_bus.rs  vt.rs
crates/niralis-session-worker/src/full_worker_fixture/: auth_identity.rs  child.rs  helpers.rs  runtime.rs  scope.rs
crates/niralis-session-worker/src/identity/: groups.rs  mod.rs  nss.rs  tests.rs
crates/niralis-session-worker/src/identity/tests/: groups.rs  nss.rs
crates/niralis-session-worker/src/isolation/: linux.rs  mod.rs  tests.rs
crates/niralis-session-worker/src/payload_scope/: backend_types.rs  cgroup.rs  cleanup.rs  contracts.rs  empty_proof.rs  identity_scope.rs  prepare.rs  termination_observer.rs  test_module.rs  zbus_provider.rs
crates/niralis-session-worker/src/payload_scope/tests/: backend_failures.rs  empty_boundary.rs  pinning.rs  precommit.rs  scripted_provider.rs  support.rs  termination.rs  validation.rs
crates/niralis-session-worker/src/privilege_drop/: libc.rs  mod.rs  tests.rs
crates/niralis-session-worker/src/runtime/: ack_tests.rs  binding_runtime_tests.rs  channels.rs  contracts.rs  entrypoint.rs  graceful_tests.rs  lifecycle.rs  pam_session.rs  scope_release.rs  supervisor_ack.rs  terminal_vt_report.rs
crates/niralis-session-worker/src/runtime/graceful_tests/: finalization.rs  release_failures.rs  support_events.rs  support_lifecycle.rs  termination_triggers.rs
crates/niralis-session-worker/src/runtime/pam_session/: opened_commit.rs  opened_environment.rs  opened_handoff_scope.rs  opened_registration.rs  opened_running.rs  pre_open.rs
crates/niralis-session-worker/src/runtime/wait/: forced_poll_cycle.rs  poll_cycle.rs
crates/niralis-session-worker/src/runtime_tests/: failures.rs  lifecycle.rs  support.rs
crates/niralis-session-worker/src/runtime_tests/failures/: failure_matrix.rs  preflight.rs
crates/niralis-session-worker/src/runtime_tests/support/: auth_vt.rs  builders.rs  session_scope.rs
crates/niralis-session-worker/src/session_child/: child_core.rs  contracts.rs  environment_exec.rs  handshake.rs  mod.rs  pending_handoff.rs  protocol.rs  runner.rs  spawn.rs  test_support.rs  tests.rs  validation.rs
crates/niralis-session-worker/src/session_child/protocol/: messages.rs  types.rs
crates/niralis-session-worker/src/session_child/tests/: child_core.rs  protocol.rs
crates/niralis-session-worker/src/termination/: coordinator.rs  forced_coordinator.rs  signals.rs  test_module.rs  types.rs
crates/niralis-session-worker/src/termination/tests/: basics.rs  decisions.rs  forced.rs  signal_cases.rs  support.rs
crates/niralis-session-worker/src/vt/: contracts.rs  control.rs  owned_terminal.rs  smoke.rs  tests.rs
crates/niralis-session-worker/tests/: full_worker.rs  launcher.rs  session_child.rs  worker.rs
crates/niralis-session-worker/tests/full_worker/: barriers.rs  harness_control.rs  harness_spawn.rs  precommit.rs  prelude.rs  running.rs
crates/niralis-session-worker/tests/launcher/: lifecycle.rs  protocol_failures.rs
crates/niralis-session/src/: error.rs  fixture_dbus_systemd_helpers.rs  launcher.rs  lib.rs  mock.rs  protocol.rs  scope_release.rs  secret.rs  tests.rs  types.rs  worker_attempt.rs  worker_io.rs  worker_process.rs
crates/niralis-session/src/launcher/: contracts.rs  interface_tests_helpers.rs  launch_completion.rs  launch_protocol.rs  public_api.rs  public_api_fixtures.rs  supervisor_api.rs  supervisor_loop.rs  supervisor_shutdown.rs
crates/niralis-session/src/launcher/recovery/: boundary.rs  boundary_proof.rs  cgroup_observer.rs  cgroup_state.rs  coordinator.rs  fixture_boundary.rs  fixture_dbus.rs  fixture_events.rs  fixture_logind.rs  fixture_model.rs  fixture_provider.rs  fixture_startup.rs  linux_provider.rs  logind_cleanup.rs  logind_identity.rs  mod.rs  model.rs  owner_watch.rs  owner_watch_open.rs  persistent.rs  persistent_operations.rs  persistent_storage.rs  persistent_tests.rs  persistent_validation.rs  provider.rs  record.rs  startup.rs  startup_absent_boundary.rs  startup_linux.rs  startup_process.rs  startup_quarantine.rs  startup_same_boot.rs  startup_same_boot_logind.rs  startup_same_boot_support.rs  startup_tests.rs  startup_vt_recovery.rs  systemd_dbus.rs  systemd_pin.rs  systemd_pin_fixture.rs  systemd_pin_integration_tests.rs  (+5 more)
crates/niralis-session/src/launcher/supervisor_loop/: messages.rs  mod.rs  pending.rs  release.rs  running.rs  running_control.rs  support.rs  terminal_vt.rs
crates/niralis-session/src/scope_release/: observation.rs  verifier.rs
crates/niralis-session/src/worker_attempt/: io_wait.rs  process.rs
crates/niralis-session/tests/: a34_source_layout.rs  daemon_replacement.rs  supervisor_full_process.rs
crates/niralis-session/tests/supervisor_full_process_cases/: mod.rs  support.rs
crates/niralisd/: Cargo.toml
crates/niralisd/src/: config.rs  config_tests.rs  error.rs  handler.rs  lib.rs  login_backend.rs  main.rs  server.rs  session_launcher.rs
crates/niralisd/src/handler/: login.rs  mod.rs  rate_limit.rs  tests.rs
crates/niralisd/src/handler/tests/: login.rs  login_backend_errors.rs  requests.rs  support.rs
crates/niralisd/src/handler/tests/support/: auth.rs  directories.rs  tracking.rs
crates/niralisd/src/login_backend/: local.rs  pam_worker.rs
crates/niralisd/src/server/: client_tests.rs  socket_nss.rs
crates/niralisd/src/session_launcher/: build_trust.rs  tests.rs
(+26 files in other folders)
