[package]
name = "niralis-session-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
dangerous-real-vt-smoke = []

[dependencies]
libc.workspace = true
libloading.workspace = true
niralis-auth.workspace = true
niralis-protocol.workspace = true
niralis-session.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
niralis-session = { workspace = true, features = ["integration-test-control"] }
