[package]
name = "niralis-session-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
dangerous-real-vt-smoke = []
worker-test-fixtures = []

[[bin]]
name = "fixture-full-worker"
path = "src/bin/fixture-full-worker.rs"
required-features = ["worker-test-fixtures"]

[[test]]
name = "full_worker"
path = "tests/full_worker.rs"
required-features = ["worker-test-fixtures"]

[dependencies]
libc.workspace = true
libloading.workspace = true
niralis-auth.workspace = true
niralis-protocol.workspace = true
niralis-session.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
zbus.workspace = true
async-io.workspace = true
futures-lite.workspace = true

[dev-dependencies]
niralis-session = { workspace = true, features = ["integration-test-control"] }
tempfile.workspace = true
