[package]
name = "niralis-session"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
integration-test-control = []

[dependencies]
libc.workspace = true
niralis-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
tempfile.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true
