[package]
name = "niralis-session"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
integration-test-control = []
supervisor-test-fixtures = ["integration-test-control"]

[dependencies]
libc.workspace = true
libloading.workspace = true
niralis-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
tempfile.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "fixture-supervisor-worker"
path = "src/bin/fixture-supervisor-worker.rs"
required-features = ["supervisor-test-fixtures"]

[[test]]
name = "supervisor_full_process"
path = "tests/supervisor_full_process.rs"
required-features = ["supervisor-test-fixtures"]
