[package]
name = "niralisd"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
niralis-auth.workspace = true
niralis-discovery.workspace = true
niralis-protocol.workspace = true
niralis-session.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
